# lightx2v-plugin-FL

./: .gitignore  README.md  pyproject.toml
docs/: upstream-entrypoint-hook.md
lightx2v_fl/: __init__.py  enable.py
lightx2v_fl/configs/: wan_t2v_flagos.json  wan_t2v_flagos_fp8.json
lightx2v_fl/device/: __init__.py
lightx2v_fl/ops/: __init__.py  attn.py  mm.py  norm.py  rope.py
tests/: test_smoke.py
