[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightx2v-plugin-fl"
version = "0.1.0"
description = "A LightX2V plugin built on the FlagOS unified multi-chip backend (FlagGems + FlagCX)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

# NOTE: lightx2v / flag_gems / flagcx are intentionally NOT hard runtime deps.
#   - lightx2v is the host framework; the plugin is meant to be installed alongside it.
#   - flag_gems / flagcx are vendor-specific builds (per-chip wheels), so the user
#     installs the right one for their hardware. The plugin degrades gracefully
#     (falls back to torch reference) when they are absent.
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

# ---------------------------------------------------------------------------
# Pluggable activation entry point.
#
# This group is consumed by the upstream hook proposed in
# docs/upstream-entrypoint-hook.md . Once LightX2V scans this group in
# set_ai_device(), `pip install lightx2v-plugin-fl` is enough — no source edits,
# no manual import. Until that hook lands, activate via:
#     import lightx2v_fl            # before `import lightx2v`
# or set PLATFORM=flagos and rely on the import shim documented in the README.
# ---------------------------------------------------------------------------
[project.entry-points."lightx2v.platform_plugins"]
flagos = "lightx2v_fl:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightx2v_fl*"]

[tool.setuptools.package-data]
"lightx2v_fl" = ["configs/**/*.json"]
